Change name list

--- a/ln-login.html
+++ b/ln-login.html
@@ -52,18 +52,16 @@
   <main>
     <div class="main-content">
       <h1>Legal Notice</h1>
-
       <h2>Imprint</h2>
-
-      <li>Leo Michael Kohl</li>
       <li>Andreas Kissner</li>
+      <li>Rue du Champ fort 6</li>
+      <li>2853 Courfaivre Suisse</li>
+      <li>Leo Michael Kohl</li>
       <li>Marius Kamto</li>
       <li>Dennis King Tran</li>
-      <li>Offinger Str. 17a </li>
-      <li>86156 Augsburg</li>
       <br />
       <h3>Exploring the Board</h3>
-      <p>Email: dennis_tran@icloud.com</p>
+      <p>Email: Andikiss500@gmail.com</p>
       <br />
       <br />
       <h3>Acceptance of terms</h3>
